--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
     <title>BOB</title>
 </head>
 <body>
-    
+    <div id="container">
+        <nav>
+            <div class="logo  float">
+                <img class="logo-picture" src="img/logo.svg" alt="whale tale">
+            </div>
+            <div class="title float">
+                <h2>Whale Tale</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>
+                        Home
+                    </li>
+                    <li>
+                        About   
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="main">
+            <h1>WHALE TALE</h1>
+        </div>
+        <footer>
+            <div class="media">
+                FB
+            </div>
+            <div class="middle ">
+                1 2 3 
+            </div>
+            <div class="next ">
+                <==>
+            </div>
+
+        </footer>
+    </div>
 </body>
 </html>
